--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <td>89549</td>
     </tr>
     <tr>
-      <td><img class="profile" cid="rgb" src="imgs/student1.png" data-url="imgs/daniel.jpg"></td>
-      <td><img class="profile" cid="cmy" src="imgs/student2.png" data-url="imgs/henrique.jpg"></td>
-      <td><img class="profile" cid="hsv" src="imgs/student3.png" data-url="imgs/tiago.jpg"></td>
+      <td><img class="profile" src="imgs/daniel.jpg"></td>
+      <td><img class="profile" src="imgs/henrique.jpg"></td>
+      <td><img class="profile" src="imgs/tiago.jpg"></td>
     </tr>
   </table>
 
@@ -36,10 +36,10 @@
       <div id="at" class="section">
         <h2 class="section">Análise de Tarefas</h2>
         <div id="at_inner" class="inner_section">
-          <a href="questionario1.html">Question&aacute;rio para an&aacute;lise de tarefas</a> <br />
-          <a href="questionario2.html">Question&aacute;rio para an&aacute;lise de tarefas (melhorado)</a> <br />
-          <a href="at1.html">An&aacute;lise de tarefas + Funcionalidades</a> <br />
-          <a href="at2.html">An&aacute;lise de tarefas + Funcionalidades (melhorados)</a> <br />
+          <a href="questionario1.html">Questionário para análise de tarefas</a> <br />
+          <a href="questionario2.html">Questionário para análise de tarefas (melhorado)</a> <br />
+          <a href="at1.html">Análise de tarefas + Funcionalidades</a> <br />
+          <a href="at2.html">Análise de tarefas + Funcionalidades (melhorados)</a> <br />
         </div>
       </div>
 
@@ -56,22 +56,22 @@
         <div id="proto_inner" class="inner_section">
           <a href="pbf1.html">PBF</a> <br />
           <a href="pbf2.html">PBF (melhorado)</a> <br />
-          <a href="protFuncional1-beta.html">Primeiro prot&oacute;tipo funcional</a> <br />
-          <a href="protFuncional1-completo.html">Primeiro prot&oacute;tipo funcional completo</a> <br />
-          <a href="protFuncional2-beta.html">Segundo prot&oacute;tipo funcional</a> <br />
-          <a href="protFuncional2-completo.html">Segundo prot&oacute;tipo funcional completo</a><br />
-          <a href="protFinal-beta.html">Prot&oacute;tipo Final</a> <br />
-          <a href="protFinal-completo.html">Prot&oacute;tipo Final completo</a><br />
+          <a href="protFuncional1-beta.html">Primeiro protótipo funcional</a> <br />
+          <a href="protFuncional1-completo.html">Primeiro protótipo funcional completo</a> <br />
+          <a href="protFuncional2-beta.html">Segundo protótipo funcional</a> <br />
+          <a href="protFuncional2-completo.html">Segundo protótipo funcional completo</a><br />
+          <a href="protFinal-beta.html">Protótipo Final</a> <br />
+          <a href="protFinal-completo.html">Protótipo Final completo</a><br />
         </div>
       </div>
 
       <div id="au" class="section">
         <h2 class="section">Avaliação com Utilizadores</h2>
         <div id="au_inner" class="inner_section">
-          <a href="tarefas-criterios1.html">Tarefas e Crit&eacute;rios de usabilidade</a> <br />
-          <a href="tarefas-criterios2.html">Tarefas e Crit&eacute;rios de usabilidade (melhorado)</a> <br />
-          <a href="relatorioTestes1.html">Relat&oacute;rio da avalia&ccedil;&atilde;o com utilizadores</a> <br />
-          <a href="relatorioTestes2.html">Relat&oacute;rio da avalia&ccedil;&atilde;o com utilizadores (melhorado)</a>
+          <a href="tarefas-criterios1.html">Tarefas e Critérios de usabilidade</a> <br />
+          <a href="tarefas-criterios2.html">Tarefas e Critérios de usabilidade (melhorado)</a> <br />
+          <a href="relatorioTestes1.html">Relatório da avaliação com utilizadores</a> <br />
+          <a href="relatorioTestes2.html">Relatório da avaliação com utilizadores (melhorado)</a>
           <br />
           <a href="manual.html">Manual do Utilizador</a> <br />
         </div>
