--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     </tr>
   </table>
 
+  <div class="barranav">
+	<div>
+      <button class="mainbutton">Análise de Tarefas</button>
+	  <button class="mainbutton">Modelo Conceptual</button>
+	  <button class="mainbutton">Protótipos</button>
+	  <button class="mainbutton">Avaliação com Utilizadores</button>
+	</div>
+  </div>
+  
   <div id="links" style="text-align: left; padding-left: 100px;">
     <p>
 
