--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>IPM 18/19 - Grupo 11</title>
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <audio id="music" loop>
+    <source src="assets/nyan.mp3" type="audio/mpeg">
+  </audio>
+
   <header class="container">
     <h1>Interfaces Pessoa Máquina 2018-19</h1>
     <h2>Grupo 11 - Turno IPM20111326L06</h2>
