--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <label for="at" class="section_header">Análise de Tarefas</label>
     <input type="checkbox" class="section_toggler" id="at" />
     <div class="section_body">
-      <a class="disabled" href="questionario1.html">Questionário para análise de tarefas</a>
+      <a href="assets/questionario.pdf">Questionário para análise de tarefas</a>
       <a class="disabled" href="questionario2.html">Questionário para análise de tarefas (melhorado)</a>
       <a class="disabled" href="at1.html">Análise de tarefas + Funcionalidades</a>
       <a class="disabled" href="at2.html">Análise de tarefas + Funcionalidades (melhorados)</a>
