--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <input type="checkbox" class="section_toggler" id="at" />
     <div class="section_body">
       <a href="assets/questionario.pdf">Questionário para análise de tarefas</a>
-      <a class="disabled" href="questionario2.html">Questionário para análise de tarefas (melhorado)</a>
-      <a class="disabled" href="at1.html">Análise de tarefas + Funcionalidades</a>
+      <a href="assets/questionario-melhorado.pdf">Questionário para análise de tarefas (melhorado)</a>
+      <a href="assets/autfunc.pdf">Análise de tarefas + Funcionalidades</a>
       <a class="disabled" href="at2.html">Análise de tarefas + Funcionalidades (melhorados)</a>
     </div>
 
