feat: add esboços (#4)
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
   </div>
 
   <div class="nav container">
+    <label for="mc" class="section_header">Outros</label>
+    <input type="checkbox" class="section_toggler" id="mc" />
+    <div class="section_body">
+      <a href="assets/esbocos.pdf">Esboços Preliminares</a>
+    </div>
+
     <label for="at" class="section_header">Análise de Tarefas</label>
     <input type="checkbox" class="section_toggler" id="at" />
     <div class="section_body">
