feat: mudar para storyboards (#5)
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
       <a class="disabled" href="at2.html">Análise de tarefas + Funcionalidades (melhorados)</a>
     </div>
 
-    <label for="mc" class="section_header">Modelo Conceptual</label>
+    <label for="mc" class="section_header">Storyboard</label>
     <input type="checkbox" class="section_toggler" id="mc" />
     <div class="section_body">
-      <a class="disabled" href="mod-conceptual1.html">Modelo Conceptual</a>
-      <a class="disabled" href="mod-conceptual2.html">Modelo Conceptual (melhorado)</a>
+      <a class="disabled" href="mod-conceptual1.html">Storyboard</a>
+      <a class="disabled" href="mod-conceptual2.html">Storyboard (melhorado)</a>
     </div>
 
     <label for="pro" class="section_header">Protótipos</label>
