--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   </div>
 
   <div class="nav container">
-    <label for="mc" class="section_header">Outros</label>
-    <input type="checkbox" class="section_toggler" id="mc" />
+    <label for="outros" class="section_header">Outros</label>
+    <input type="checkbox" class="section_toggler" id="outros" />
     <div class="section_body">
       <a href="assets/esbocos.pdf">Esboços Preliminares</a>
     </div>
