feat: aut melhorado

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a href="assets/questionario.pdf">Questionário para análise de tarefas</a>
       <a href="assets/questionario-melhorado.pdf">Questionário para análise de tarefas (melhorado)</a>
       <a href="assets/autfunc.pdf">Análise de tarefas + Funcionalidades</a>
-      <a class="disabled" href="at2.html">Análise de tarefas + Funcionalidades (melhorados)</a>
+      <a href="assets/autfunc-melhorado.pdf">Análise de tarefas + Funcionalidades (melhorados)</a>
     </div>
 
     <label for="mc" class="section_header">Storyboard</label>
