feat: adicionar lanterna

--- a/igo/index.html
+++ b/igo/index.html
@@ -39,8 +39,8 @@
           <!-- Faces Go Here -->
         </div>
 
-        <div class="screen" id="flashlight" data-name="Lanterna">
-          Lanterna
+        <div class="screen goto" data-to="mainmenu" id="flashlight" data-name="Lanterna">
+          <i class="fas fa-lightbulb"></i>
         </div>
 
         <div class="screen" id="places" data-name="Locais">
