--- a/igo/index.html
+++ b/igo/index.html
@@ -64,6 +64,7 @@
         </span>
       </div>
     </div>
+    <div class="goto" data-to="mainmenu" data-needsunlock="true" id="mainbutton"></div>
   </div>
 
   <script src="./js/data.js"></script>
