--- a/igo/index.html
+++ b/igo/index.html
@@ -29,9 +29,11 @@
         <div class="screen" id="mainmenu">
           <ul>
             <li class="goto" data-to="people"><i class="fas fa-user-friends"></i></li>
-            <li class="goto" data-to="places"><i class="fas fa-map-marked"></i></li>
+            <li class="goto" data-to="gps"><i class="fas fa-location-arrow"></i></li>
+            <li class="goto" data-to="places"><i class="fas fa-map-pin"></i></li>
             <li class="goto" data-to="budget"><i class="fas fa-wallet"></i></li>
             <li class="goto" data-to="flashlight"><i class="fas fa-lightbulb"></i></li>
+            <li class="goto" data-to="faq"><i class="fas fa-question"></i></li>
           </ul>
         </div>
 
@@ -43,12 +45,20 @@
           <i class="fas fa-lightbulb"></i>
         </div>
 
+        <div class="screen" id="gps" data-name="GPS">
+          GPS
+        </div>
+
         <div class="screen" id="places" data-name="Locais">
           Locais
         </div>
 
         <div class="screen" id="budget" data-name="Orçamentos">
           Orçamento
+        </div>
+
+        <div class="screen" id="faq" data-name="FAQ">
+          FAQ
         </div>
       </div>
 
