--- a/igo/index.html
+++ b/igo/index.html
@@ -41,7 +41,7 @@
           <!-- Faces Go Here -->
         </div>
 
-        <div class="screen goto" data-to="mainmenu" id="flashlight" data-name="Lanterna">
+        <div class="screen goto" data-to="mainmenu" id="flashlight" data-call="turnOnFlashLight" data-name="Lanterna">
           <i class="fas fa-lightbulb"></i>
         </div>
 
