feat: add places

--- a/igo/index.html
+++ b/igo/index.html
@@ -59,23 +59,23 @@
             <p>Recomendados</p>
           </div>
           <div class="item category goto" data-to="places-list" data-args="favourites">
-            <i class="favourite fas fa-star"></i>
+            <i class="favourites fas fa-star"></i>
             <p>Favoritos</p>
           </div>
           <div class="item category goto" data-to="places-list" data-args="restaurants">
-            <i class="restaurant fas fa-utensils"></i>
+            <i class="restaurants fas fa-utensils"></i>
             <p>Restaurantes</p>
           </div>
           <div class="item category goto" data-to="places-list" data-args="parks">
-            <i class="park fas fa-tree"></i>
+            <i class="parks fas fa-tree"></i>
             <p>Parques</p>
           </div>
           <div class="item category goto" data-to="places-list" data-args="monuments">
-            <i class="monument fas fa-landmark"></i>
+            <i class="monuments fas fa-landmark"></i>
             <p>Monumentos</p>
           </div>
           <div class="item category goto" data-to="places-list" data-args="markets">
-            <i class="market fas fa-store"></i>
+            <i class="markets fas fa-store"></i>
             <p>Mercados</p>
           </div>
           <div class="item category goto" data-to="places-list" data-args="diversions">
