--- a/igo/index.html
+++ b/igo/index.html
@@ -41,8 +41,19 @@
           <!-- Faces Go Here -->
         </div>
 
-        <div class="screen" id="places-list" data-name="Locais" data-call="updatePlaces">
+        <div class="screen" id="places-list" data-call="updatePlaces">
           <!-- Places Go Here -->
+        </div>
+
+        <div class="screen" id="place-desc" data-call="updatePlaceInfo">
+          <p>Classificação</p>
+          <div>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
         </div>
 
         <div class="screen goto" data-to="mainmenu" id="flashlight" data-call="turnOnFlashLight" data-name="Lanterna">
@@ -54,31 +65,31 @@
         </div>
 
         <div class="screen" id="places" data-name="Locais">
-          <div class="item category goto" data-to="places-list" data-args="recommended">
+          <div class="item category goto" data-to="places-list" data-args="recommended#Recomendados">
             <i class="recommended fas fa-certificate"></i>
             <p>Recomendados</p>
           </div>
-          <div class="item category goto" data-to="places-list" data-args="favourites">
+          <div class="item category goto" data-to="places-list" data-args="favourites#Favoritos">
             <i class="favourites fas fa-star"></i>
             <p>Favoritos</p>
           </div>
-          <div class="item category goto" data-to="places-list" data-args="restaurants">
+          <div class="item category goto" data-to="places-list" data-args="restaurants#Restaurantes">
             <i class="restaurants fas fa-utensils"></i>
             <p>Restaurantes</p>
           </div>
-          <div class="item category goto" data-to="places-list" data-args="parks">
+          <div class="item category goto" data-to="places-list" data-args="parks#Parques">
             <i class="parks fas fa-tree"></i>
             <p>Parques</p>
           </div>
-          <div class="item category goto" data-to="places-list" data-args="monuments">
+          <div class="item category goto" data-to="places-list" data-args="monuments#Monumentos">
             <i class="monuments fas fa-landmark"></i>
             <p>Monumentos</p>
           </div>
-          <div class="item category goto" data-to="places-list" data-args="markets">
+          <div class="item category goto" data-to="places-list" data-args="markets#Mercados">
             <i class="markets fas fa-store"></i>
             <p>Mercados</p>
           </div>
-          <div class="item category goto" data-to="places-list" data-args="diversions">
+          <div class="item category goto" data-to="places-list" data-args="diversions#Diversões">
             <i class="fas fa-chess"></i>
             <p>Diversões</p>
           </div>
