--- a/igo/index.html
+++ b/igo/index.html
@@ -47,13 +47,19 @@
 
         <div class="screen" id="place-desc" data-call="updatePlaceInfo">
           <p>Classificação</p>
-          <div>
+          <div class="rating">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
           </div>
+
+          <div class="actions">
+            <button><i class="fas fa-star"></i> Adicionar</button>
+            <button><i class="fas fa-directions"></i> Ir</button>
+          </div>
+
         </div>
 
         <div class="screen goto" data-to="mainmenu" id="flashlight" data-call="turnOnFlashLight" data-name="Lanterna">
