feat: start budget

--- a/igo/index.html
+++ b/igo/index.html
@@ -101,8 +101,8 @@
           </div>
         </div>
 
-        <div class="screen" id="budget" data-name="Orçamentos">
-          Orçamento
+        <div class="screen" id="budget" data-call="updateBudget" data-name="Orçamentos">
+    
         </div>
 
         <div class="screen" id="faq" data-name="FAQ">
