feat: add contactless

--- a/igo/index.html
+++ b/igo/index.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <button id="contacless" onclick="contactless()">
+      <img src="assets/contacless.png">
+  </button>
+
   <div id="container">
     <div id="watch">
       <div id="status">
