--- a/index.html
+++ b/index.html
@@ -58,15 +58,13 @@
     <input type="checkbox" class="section_toggler" id="mc" />
     <div class="section_body">
       <a href="assets/storyboards.pdf">Storyboard</a>
-      <a class="disabled" href="mod-conceptual2.html">Storyboard (melhorado)</a>
     </div>
 
     <label for="pro" class="section_header">Protótipos</label>
     <input type="checkbox" class="section_toggler" id="pro" />
     <div class="section_body">
       <a href="assets/prototipo.pdf">PBF</a>
-      <a class="disabled" href="pbf2.html">PBF (melhorado)</a>
-      <a class="disabled" href="protFuncional1-beta.html">Primeiro protótipo funcional</a>
+      <a href="igo/index.html">Primeiro protótipo funcional</a>
       <a class="disabled" href="protFuncional1-completo.html">Primeiro protótipo funcional completo</a>
       <a class="disabled" href="protFuncional2-beta.html">Segundo protótipo funcional</a>
       <a class="disabled" href="protFuncional2-completo.html">Segundo protótipo funcional completo</a>
