feat: spaces on numbers

--- a/igo/index.html
+++ b/igo/index.html
@@ -124,9 +124,7 @@
 
           <button class="blue only-current goto" data-to="create-expense"><i class="fas fa-money-bill"></i> Nova Despesa</button>
 
-          <div id="budget-expenses">
-
-          </div>
+          <div id="budget-expenses"></div>
 
           <div id="budget-actions" class="only-current">
             <button class="blue" onclick="endBudget()" ><i class="fas fa-book-open"></i> Concluir Viagem</button>
