GPS - Added search input box
Doesn't do anything yet, can't figure out how to add margin above without moving the map background image

--- a/igo/index.html
+++ b/igo/index.html
@@ -71,7 +71,10 @@
         </div>
 
         <div class="screen" id="gps" data-name="GPS">
-          <input placeholder="Insira destino" id="new-destination" type="text" oninput="onNewDestinationChange()"></input>
+          <div id="gps-search">
+            <input placeholder="Insira destino" id="new-destination" type="text" oninput="onNewDestinationChange()"></input>
+            <span class="fas fa-search" onclick="startGPS()"></span>
+          </div>
           <i class="fas fa-map-marker"></i>
         </div>
 
