iGo - fixed bat commit

--- a/igo/index.html
+++ b/igo/index.html
@@ -75,7 +75,8 @@
             <input placeholder="Insira destino" id="new-destination" type="text" oninput="onNewDestinationChange()"></input>
             <span class="fas fa-search" onclick="startGPS()"></span>
           </div>
-          <i class="fas fa-map-marker"></i>
+          <i id="current-position" class="fas fa-map-marker"></i>
+          <i id="destination" class="fas fa-map-marker"></i>
         </div>
 
         <div class="screen" id="places" data-name="Locais">
