--- a/igo/index.html
+++ b/igo/index.html
@@ -35,7 +35,7 @@
             <li class="goto" data-to="people"><i class="fas fa-user-friends"></i></li>
             <li class="goto" data-to="gps"><i class="fas fa-map-marked-alt"></i></li>
             <li class="goto" data-to="places"><i class="fas fa-map-pin"></i></li>
-            <li class="goto" data-to="budget"><i class="fas fa-wallet"></i></li>
+            <li class="goto" data-to="budget"><i class="fas fa-donate"></i></li>
             <li class="goto" data-to="flashlight"><i class="fas fa-lightbulb"></i></li>
             <li class="goto" data-to="faq"><i class="fas fa-question"></i></li>
           </ul>
@@ -54,9 +54,7 @@
         </div>
 
         <div class="screen" id="restaurant-booking" data-call="bookRestaurant">
-          <input placeholder="Nome da Reserva" id="new-booking-name" type="text" oninput="onNewBookingChange()"></input>
-          <input placeholder="Pessoas (16 máximo)" id="new-booking-people" min="1" max="16" type="number" oninput="onNewBookingChange()"></input>
-          <p>Horas:  <input id="new-booking-time" type="time" oninput="onNewBookingChange()"></input></p>
+          
         </div>
 
         <div class="screen goto" data-to="mainmenu" id="flashlight" data-call="turnOnFlashLight" data-name="Lanterna">
