feat: some improvements
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -69,14 +69,10 @@
           <i class="fas fa-map-marker current-position"></i>
         </div>
         
-        <div class="screen" id="gps-path" data-name="Caminho">
-          <div class="gps-search">
-            <input placeholder="Insira destino" type="text"></input>
-            <span class="fas fa-search"></span>
-          </div>
+        <div class="screen" id="gps-path" data-name="Percurso">
           <i class="fas fa-map-marker current-position"></i>
           <i class="fas fa-map-marker destination"></i>
-          <button id="start-route-button">Go</button>
+          <button id="start-route-button">Ir</button>
         </div>
 
         <div class="screen" id="places" data-name="Locais">
