--- a/igo/index.html
+++ b/igo/index.html
@@ -63,7 +63,7 @@
 
         <div class="screen" id="gps" data-name="GPS">
           <div class="gps-search">
-            <input placeholder="Insira destino" type="text"></input>
+            <input id="gps-input" placeholder="Insira destino" type="text"></input>
             <span class="fas fa-search goto" data-to="gps-path"></span>
           </div>
           <i class="fas fa-map-marker current-position"></i>
