--- a/igo/index.html
+++ b/igo/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>iGo</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/picker.min.css">
   <link rel="stylesheet" href="css/fontawesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -53,7 +54,7 @@
 
         </div>
 
-        <div class="screen" id="restaurant-booking" data-call="bookRestaurant">
+        <div class="screen" id="restaurant-booking" data-name="Reservar" data-call="bookRestaurant">
           
         </div>
 
@@ -208,6 +209,7 @@
     <div class="goto" data-to="mainmenu" data-needsunlock="true" id="mainbutton"></div>
   </div>
 
+  <script src="./js/picker.min.js"></script>
   <script src="./js/utils.js"></script>
   <script src="./js/data.js"></script>
   <script src="./js/app.js"></script>
