--- a/igo/index.html
+++ b/igo/index.html
@@ -67,12 +67,11 @@
             <input id="gps-input" placeholder="Insira destino" type="text"></input>
             <span class="fas fa-search goto" data-to="gps-path"></span>
           </div>
-          <i class="fas fa-map-marker current-position"></i>
+
+          <ul class="gps-results"></ul>
         </div>
         
-        <div class="screen" id="gps-path" data-name="Percurso">
-          <i class="fas fa-map-marker current-position"></i>
-          <i class="fas fa-map-marker destination"></i>
+        <div class="screen" data-call="showGpsPath" id="gps-path" data-name="Percurso">
           <button id="start-route-button">Ir</button>
         </div>
 
