--- a/igo/index.html
+++ b/igo/index.html
@@ -80,6 +80,10 @@
 				</div>
 
         <div class="screen" id="places" data-name="Locais">
+          <div class="item category goto" data-to="places-list" data-args="reservations#Reservas">
+            <i class="reservations fas fa-book"></i>
+            <p>Reservas</p>
+          </div>
           <div class="item category goto" data-to="places-list" data-args="recommended#Recomendados">
             <i class="recommended fas fa-certificate"></i>
             <p>Recomendados</p>
