--- a/igo/index.html
+++ b/igo/index.html
@@ -75,7 +75,7 @@
           <button id="start-route-button" class="goto" data-to="gpsGo">Ir</button>
         </div>
 				
-				<div class="screen" id="gpsGo" data-name="Percurso">
+				<div class="screen" id="gpsGo" data-call="startGpsAnimation" data-name="Percurso">
 					<i class="destination fas fa-map-marker"></i>
 				</div>
 
