feat: separate guide from places
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -79,7 +79,7 @@
 					<i class="destination fas fa-map-marker"></i>
 				</div>
 
-        <div class="screen" id="places" data-name="Locais">
+        <div class="screen" id="places" data-name="Guia">
           <div class="item category goto" data-to="places-list" data-args="reservations#Reservas">
             <i class="reservations fas fa-book"></i>
             <p>Reservas</p>
@@ -92,6 +92,13 @@
             <i class="favourites fas fa-star"></i>
             <p>Favoritos</p>
           </div>
+          <div class="item category goto" data-to="all-places">
+            <i class="fas fa-map-marker-alt" style="color: #e67e22"></i>
+            <p>Locais</p>
+          </div>
+        </div>
+
+        <div class="screen" id="all-places" data-name="Locais">
           <div class="item category goto" data-to="places-list" data-args="restaurants#Restaurantes">
             <i class="restaurants fas fa-utensils"></i>
             <p>Restaurantes</p>
